--- a/group.tex
+++ b/group.tex
@@ -23,7 +23,7 @@ CONCON
   Let $G$ be a semigroup. Then TFAE (the following are equivalent)
   \begin{enumerate}
     \item $G$ is a group.
-    \item For all $a, b \in G$ and the equations $bx=a, yb=a$, each of then
+    \item For all $a, b \in G$ and the equations $bx=a, yb=a$, each of them
       has a solution in $G$.
     \item $\exists e \in G$ s.t. $ae=a \; \forall a \in G$ and if we fix
       such $e$, then $\forall b \in G \; \exists b' \in G$ s.t. $bb' = e$.
