Fix H \in \phi => H \ne \phi

--- a/group.tex
+++ b/group.tex
@@ -55,7 +55,7 @@ CONCON
         $a b^{-1} \in H$.
       \item[$\Leftarrow$]
         \begin{enumerate}
-          \item $H \in \phi \implies \exists a \in H \implies
+          \item $H \ne \phi \implies \exists a \in H \implies
             aa^{-1} = 1 \in H$.
           \item $1, a \in H \implies 1 a^{-1} = a^{-1} \in H$.
           \item $a, b^{-1} \in H \implies a (b^{-1})^{-1} = ab \in H$.
