--- a/group/week1.tex
+++ b/group/week1.tex
@@ -1,7 +1,7 @@
 %! TEX root=../main.tex
 \section{Group theory}
 
-\subsection{Basic}
+\subsection{Week 1}
 
 \begin{definition}
   A non-empty set $G$ with a binary function $f: G \times G \to G,
