--- a/main.tex
+++ b/main.tex
@@ -151,6 +151,9 @@
 \newcommand{\Cbx}{\mathbb{C}^\times}
 \newcommand{\Hbx}{\mathbb{H}^\times}
 
+\newcommand{\ob}{\overline}
+\DeclareMathOperator{\ord}{ord}
+
 % cycle group \cycle{1,2,3} => (1 2 3)
 \ExplSyntaxOn
 \NewDocumentCommand{\cycle}{ O{\;} m }
@@ -190,6 +193,7 @@
 \newtheorem{exercise}{Ex}[subsection]
 \newtheorem{example}{Eg}[subsection]
 \newtheorem{fact}{Fact}
+\newtheorem{prop}{Prop}
 
 %%%%%%%%%%%%%%Title information%%%%%%%%%%%%%%
 \title{Algebra}
