--- a/group/week2.tex
+++ b/group/week2.tex
@@ -86,8 +86,8 @@ $\sigma \cycle{j_1, \dots, j_m} \sigma^{-1} =
 
 \begin{exercise} \mbox{}
   \begin{enumerate}
-    \item $S_n = \langle \cycle{1,2},\cycle{2,3},\dots,\cycle{n-1,n} \rangle$.
-    \item $S_n = \langle \cycle{1,2},\cycle{1,2,\dots,n} \rangle$.
+    \item $S_n = \langle \cycle{1,2},\cycle{2,3},\dots,\cycle{n-1,n} \rangle, \quad n \ge 2$.
+    \item $S_n = \langle \cycle{1,2},\cycle{1,2,\dots,n} \rangle, \quad n \ge 2$.
   \end{enumerate}
 \end{exercise}
 
@@ -300,7 +300,7 @@ For $n = 3, A \in \text{O}(3)$, we have $A \sim \begin{pmatrix}
 
 \begin{exercise} \mbox{}
   \begin{enumerate}
-    \item $\ord(a) = \ord(a^{-1} = n$.
+    \item $\ord(a) = \ord(a^{-1}) = n$.
     \item $\langle a^r \rangle = \langle a^{\gcd(n, r)} \rangle$.
     \item $\langle a^{r_1} \rangle = \langle a^{r_2} \rangle \iff
       \gcd(n, r_1) = \gcd(n, r_2)$.
