--- a/group/week2.tex
+++ b/group/week2.tex
@@ -284,10 +284,10 @@ For $n = 3, A \in \text{O}(3)$, we have $A \sim \begin{pmatrix}
 \begin{prop}
   Any subgroup of a cyclic group is cyclic.
   \begin{proof}
-    Let $G4 = \langle a \rangle$ and $H \le G$. If $H = \{1\}$, then
+    Let $G = \langle a \rangle$ and $H \le G$. If $H = \{1\}$, then
     $H = \langle 1 \rangle$, done!
 
-    Otherwise, $d = \min \{ m \in \Nb \mid a^m \ in H \}$, by well-ordering
+    Otherwise, $d = \min \{ m \in \Nb \mid a^m \in H \}$, by well-ordering
     axiom. Claim $H = \langle a^d \rangle$.
     \begin{description}
       \item[$\supset:$] $a^d \in H$ by the definition of $d$.
