Fix typo in week 2.

--- a/group/week2.tex
+++ b/group/week2.tex
@@ -331,7 +331,7 @@ For $n = 3, A \in \text{O}(3)$, we have $A \sim \begin{pmatrix}
   \begin{itemize}
     \item $G = G_1 G_2 = \{\, g_1 g_2 \mid g_1 \in G_1, g_2 \in G_2 \,\}$.
     \item $G_1 \cap G_2 = \{ 1 \}$. (consider $a \ne 1 \in G_1 \cap G_2$, then
-      $(1, a) \mapsto 1, (a, 1) \mapsto 1$, but the function is 1-1, which
+      $(1, a) \mapsto a, (a, 1) \mapsto a$, but the function is 1-1, which
       is a contradiction.)
     \item If $a \in G$ with $a = g_1g_2 = g_1'g_2'$, then
       $(g_1')^{-1}g_1 = (g_2')g_2^{-1} \in G_1 \cap G_2 = \{ 1 \} \implies
