--- a/group/week1.tex
+++ b/group/week1.tex
@@ -6,7 +6,7 @@
 \begin{definition}
   A non-empty set $G$ with a binary function $f: G \times G \to G,
   (a, b) \mapsto ab$
-  is a {\it group} if it satisfies
+  is a {\bf group} if it satisfies
   \begin{enumerate}
     \item $(ab)c = a(bc)$.
     \item $\exists 1 \in G$ s.t. $1a = a1 = a, \forall a \in G$.
@@ -17,7 +17,7 @@
 CONCON
 
 \begin{definition}
-  Let $G$ be a group. Then $G$ is said to be {\it abelian} if
+  Let $G$ be a group. Then $G$ is said to be {\bf abelian} if
   $\forall a, b \in G, ab = ba$.
 \end{definition}
 
@@ -88,10 +88,10 @@ CONCON
 \end{example}
 
 \begin{definition}
-  Let $f: G_1 \to G_2$. f is called an {\it isomorphism} if
+  Let $f: G_1 \to G_2$. f is called an {\bf isomorphism} if
   \begin{enumerate}
     \item $f$ is 1-1 and onto.
-    \item $\forall a, b \in G_1, f(ab) = f(a)f(b)$. ({\it homomorphism})
+    \item $\forall a, b \in G_1, f(ab) = f(a)f(b)$. ({\bf homomorphism})
   \end{enumerate}
   , denoted by $G_1 \cong G_2$.
 \end{definition}
