Add missing exercise

--- a/group/week3.tex
+++ b/group/week3.tex
@@ -165,8 +165,11 @@ $b_2^{-1}a_1^{-1}a_2b_2 \in H$.
   \end{enumerate}
 \end{exercise}
 
-\begin{exercise}
-  If $H \le S_n$ and $\exists \sigma \in H$ is odd, then $[H:H\cap A_n] = 2$.
+\begin{exercise} \mbox{}
+  \begin{enumerate}
+    \item If $H \le S_n$ and $\exists \sigma \in H$ is odd, then $[H:H\cap A_n] = 2$.
+    \item For $n \ge 3$, $[S_n, S_n] = A_n$.
+  \end{enumerate}
 \end{exercise}
 
 \begin{exercise}
