--- a/group/week3.tex
+++ b/group/week3.tex
@@ -195,7 +195,7 @@ $b_2^{-1}a_1^{-1}a_2b_2 \in H$.
 \end{theorem}
 
 \begin{theorem}[Factor theorem]
-  Let $f: G_1 \to G_2$ b.e a group homo. and $H \le \Ker f$. Then
+  Let $f: G_1 \to G_2$ b.e a group homo. and $H \lhd G_1, H \le \Ker f$. Then
   $\exists$ a group homo. $\varphi: \quot{G}{H} \to G_2$ s.t.
   一個ㄛ圖
 \end{theorem}
@@ -296,7 +296,7 @@ $b_2^{-1}a_1^{-1}a_2b_2 \in H$.
                   \quot{H}{K} \subseteq Q$. So $Q = \quot{H}{K}$.
             \end{itemize}
           \item $H \lhd G, K \le H \iff \forall g\in G, gHg^{-1} = H, K \le H
-            \iff \forall \ob{g} \in \quot{G}{H}, \ob{g}(\quot{H}{K})\ob{g}^{-1}
+            \iff \forall \ob{g} \in \quot{G}{K}, \ob{g}(\quot{H}{K})\ob{g}^{-1}
             = \quot{H}{K} \iff \quot{H}{K} \lhd {G}{K}$. \qedhere
         \end{itemize}
       \end{proof}
