--- a/main.tex
+++ b/main.tex
@@ -219,6 +219,7 @@
 \include{group/week1}
 \include{group/week2}
 \include{group/week3}
+\include{group/week4}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
 % \bibliography{journal.bib}
