Add week5 (partial)

--- a/group/week4.tex
+++ b/group/week4.tex
@@ -252,9 +252,9 @@ Inverse limit:
 \begin{exercise}
   Let $F$ be a field. Show that
   \begin{enumerate}
-    \item if $\Char F = 0$, then $\Qb \hookrightarrow \text{subfield of~} F$.
+    \item if $\Char F = 0$, then $\Qb \toone \text{subfield of~} F$.
     \item if $\Char F = p$, then
-      $\quot{\Zb}{p\Zb} \hookrightarrow \text{subfield of~} F$.
+      $\quot{\Zb}{p\Zb} \toone \text{subfield of~} F$.
   \end{enumerate}
   \label{ex:4-4}
 \end{exercise}
@@ -264,7 +264,7 @@ Inverse limit:
   $p$ is a prime.
   \begin{proof}
     By Ex. \ref{ex:4-4}, $\Char F = p$, $p$ is a prime and $\quot{\Zb}{p\Zb}
-    \hookrightarrow F$.
+    \toone F$.
 
     We have $\quot{\Zb}{p\Zb} \times F \to F, (r, v) \mapsto rv$.
     $F$ can be rearded as a vector space over $\quot{\Zb}{p\Zb}$.
