--- a/main.tex
+++ b/main.tex
@@ -158,6 +158,7 @@
 \DeclareMathOperator{\Image}{Im}
 \DeclareMathOperator{\Ker}{ker}
 \DeclareMathOperator{\Char}{char}
+\DeclareMathOperator{\Fix}{Fix}
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
 \DeclarePairedDelimiter{\gen}{\langle}{\rangle} % generator
@@ -167,6 +168,7 @@
 \newcommand\toone{\hookrightarrow}
 \newcommand\onto{\twoheadrightarrow}
 \newcommand\acts{\curvearrowright}
+\newcommand\revacts{\curvearrowleft}
 
 % cycle group \cycle{1,2,3} => (1 2 3)
 \ExplSyntaxOn
@@ -185,6 +187,7 @@
  }
 \ExplSyntaxOff
 
+\newcommand\Div{\,\big|\,}
 \newcommand\relmiddle[1]{\mathrel{}\middle#1\mathrel{}}
 \newcommand{\RNum}[1]{\uppercase\expandafter{\romannumeral #1\relax}}
 
@@ -228,6 +231,7 @@
 \include{group/week3}
 \include{group/week4}
 \include{group/week5}
+\include{group/week6}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
 % \bibliography{journal.bib}
