--- a/main.tex
+++ b/main.tex
@@ -159,6 +159,9 @@
 \DeclareMathOperator{\Ker}{ker}
 \DeclareMathOperator{\Char}{char}
 \DeclareMathOperator{\Fix}{Fix}
+\DeclareMathOperator{\Inn}{Inn}
+\DeclareMathOperator{\Aut}{Aut}
+\DeclareMathOperator{\Isom}{Isom}
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
 \DeclarePairedDelimiter{\gen}{\langle}{\rangle} % generator
@@ -208,6 +211,7 @@
 \newtheorem{conclusion}{Conclusion}
 \newtheorem{lemma}{Lemma}
 \newtheorem{remark}{Remark}
+\newtheorem{observation}{Observation}
 \newtheorem{definition}{Def}
 \newtheorem{exercise}{Ex}[subsection]
 \newtheorem{example}{Eg}[subsection]
