--- a/group/week6.tex
+++ b/group/week6.tex
@@ -1,22 +1,22 @@
-%! TEX root=../main.tex
+%1 TEX root=../main.tex
 \subsection{Week 6}
 \subsubsection{Group actions \RNum{2}}
 
 \begin{definition}
   Let $G \acts X$ and $\abs{X} < \infty$.
-  Write $\Fix G \defeq \{\, x \in X \mid gx = x \quad \forall g \in G \,\}$.
+  Write $\Fix G \defeq \{\, \times \in \times \mid gx = \times \quad \forall g \in G \,\}$.
 \end{definition}
 
 \begin{itemize}
-  \item $x \in \Fix G$, $Gx = \{ x \}$.
+  \item $x \in \Fix G$, $Gx = \{ \times \}$.
   \item $x \not\in \Fix G$, $\abs{Gx} = [G : G_x]$.
 \end{itemize}
 
-Let $\{ G_{x_1}, \dots, G_{x_n} \}$ be the set of distinct orbits.
-After rearrangement, assume $x_1, \dots, x_r \in \Fix G,
-x_{r+1}, \dots, x_n \not\in \Fix G$. Then
+Let $\{ G_{\times_1}, \dots, G_{\times_n} \}$ be the set of distinct orbits.
+After rearrangement, assume $\times_1, \dots, \times_r \in \Fix G,
+\times_{r+1}, \dots, \times_n \not\in \Fix G$. Then
 \[
-  \abs{X} = \abs{\Fix G} + \sum_{i=r+1}^{n} [G : G_{x_i}]
+  \abs{X} = \abs{\Fix G} + \sum_{i=r+1}^{n} [G : G_{\times_i}]
 \]
 
 \begin{theorem}[class equation]
@@ -28,7 +28,7 @@ x_{r+1}, \dots, x_n \not\in \Fix G$. Then
   \begin{proof}
     Consider the action $(g, x) \mapsto gxg^{-1}$, then
     \[
-      \Fix G = \{\, x \in G \mid gxg^{-1} = x \quad \forall g \in G \,\}
+      \Fix G = \{\, \times \in G \mid gxg^{-1} = \times \quad \forall g \in G \,\}
       = Z_G
     \]
     It follows from the above argument.
@@ -110,8 +110,8 @@ x_{r+1}, \dots, x_n \not\in \Fix G$. Then
 
 \begin{theorem}[Cauchy theorem]
   Let $p \Div \abs{G}$. Then $\exists a \in G$ s.t. $\ord(a) = p$. Consider 
-  \[ X = \{\, (a_1, \dots, a_p) \mid a_i \in G, a_1a_2\dots a_p = 1\,\} \]
-  and the action $\quot{\Zb}{p\Zb} \times X \to X$:
+  \[ \times = \{\, (a_1, \dots, a_p) \mid a_i \in G, a_1a_2\dots a_p = 1\,\} \]
+  and the action $\quot{\Zb}{p\Zb} \times \times \to X$:
   \[
     (\ob{k}, (a_1, \dots, a_p)) \mapsto (a_{k+1}, \dots, a_p, a_1, \dots, a_k)
   \]
@@ -168,3 +168,138 @@ By the def. of $\Ker \varphi$, $E \cong \quot{\Zb}{p\Zb} \times
 
 We find that $H \cap E = \gen{a^p}$. Pick $b \in E \setminus H$ and let
 $K = \gen{b} \implies \abs{K} = p, H \cap K = \{ 1 \}, HK = G$.
+
+\subsubsection{Semidirect product}
+
+\begin{fact}
+$K \lhd G, H \lhd G, K \cap H = \{1\} \implies KH = K \times H$ \\
+($\forall k\in K, h \in H, khk^{-1} h^{-1} \in H \cap K = \{1\}, \implies kh=hk$)
+\end{fact}
+
+\begin{fact}
+Let $K, H$ be two groups, and $G=K \times H \implies K \times \{1\} \lhd K \times H, \{1\} \times H \lhd K \times H$
+\end{fact}
+
+\begin{observation}
+$K \leq G, H \lhd G, K \cap H = \{1\}$ (K 慘 H 好，簡稱慘好集) \\
+$\implies$ elements in $KH$ has unique representation ? 好事喔\\
+$KH \iff K \times H$ 1-1 corresp, $(kh) \iff (k, h)$
+\end{observation}
+
+Group operation : 
+$\forall k_1, k_2 \in K, h_1, h_2 \in H, (k_1 h_1) (k_2 h_2) = k_1 k_2 (k_2^{-1} h_1 k_2) h_2$ \\
+Let $\tau : K \implies \Aut(H), k \implies \tau(k) : h\implies khk^{-1}$ (類似 $\in \Inn(H)$ )
+
+\begin{definition}[Semi-Direct Product (慘好積)] 
+  $K \times_{\tau} H = \{(k, h) | k\in K, h \in H\}$ with group operation :
+$(k_1, h_1)(k_2, h_2) = (k_1 k_2, \tau(k_2^{-1})(h_1)(h_2))$
+where $\tau : K \implies \Aut(H)$  (need not to be inner homomorphism)
+\end{definition}
+
+Properties:
+\begin{itemize}
+  \item Associativity: Good, ex 
+  \item The identity = $(1, 1)$
+  \item Inverse : $(k, h)^{-1} = (k^{-1}, \tau(k)(h^{-1}))$
+  \item $K \cong K \times \{1\} \leq K \times_{\tau} H$ :
+    $(k_1, 1)(k_2, 1) = (k_1 k_2, \tau(k_2^{-1})(1)1) = (k_1 k_2, 1) \in K \times \{1\}$
+    $H \cong \{1\} \times H \leq K \times{\tau} H : (1, h+1), (1, h_2) = (1, \tau(1^{-1})(h_1)h_2) = (1, h_1 h_2) \in \{1\} \times K $
+  \item $H \lhd K \times_t H : (k, h) (1, h')(k, h)^{-1} = (k, hh')(k^{-1}, \tau(k)(h^{-1}))
+    = (1, \tau(k)(hh')\tau(k)(h^{-1})) \in H$
+
+  \item $\tau(k)(h) = khk^{-1}$ : 
+    $(k, 1)(1, h)(k^{-1}, 1) = (k, h)(k^{-1}, 1) = (1, \tau(k)(h))$
+  \item If $\tau$ is trivial \implies $K \times_t H \cong K \times H$
+\end{itemize}
+
+\begin{remark}
+Some definition swaps the order of $H$ and $K$, i.e. $(h_1, k_1) (h_2, k_2) = (h_1 \phi(k_1)(h_2), k_1 k_2)$
+\end{remark}
+
+\begin{exercise}
+Show that $H \rtimes_\phi K$ is a group and satisfies the above properties.
+\end{exercise}
+
+\begin{example}
+Construct a non-abelian group of order 21.
+\end{example}
+
+\begin{fact}
+$\Aut(\Zb/p\Zb) \cong (\Zb/p\Zb)^\times \cong C_{p-1}$
+\end{fact}
+Sol : $\phi_k: \Zb/p\Zb \implies \Zb/p\Zb, \bar{1} \implies \bar{k}$
+
+$\phi_k_2 o \phi_k_1 (T) = \phi_k_2(\bar(k_1)) = \phi_k_2(T+\cdots+T) = \bar(k_2) + \cdots \bar{k_2} = \bar{k_1 k_2}$
+
+Let $K = C_3, H = C_7$, define $\tau : C_3 \implies \Aut(C_7) \cong C_6, a \implies \phi_2$
+$phi_k : b \implies b^k$
+
+$G = \gen{a, b | a^3=1, b^7=1, aba^{-1}=b^2}$
+
+\begin{example}
+p : odd, $|G| = p^3$, $G$ is non-abelian.
+\end{example}
+(sol) 
+$\phi: G \implies Z(G), a \implies a^p$ non trivial
+case $\exists a \in G $ with $\ord(a) = p^2$.
+Let $H = <a>$ here $\phi$ is onto and $E = \ker \phi \cong \Zb/p\Zb \times \Zb/p\Zb$
+And $|H \cap E| = p$
+$H \lhd G$ because $[G: H]=p$
+Pick $b \in E \ H$ and let $K = <b>$ \implies $|K| = p, K \cap H = \{1\}$
+so $|G| = |KH| = p^3$
+
+\begin{fact}
+$\Aut(Z/p^2 Z) \cong (Z/p^2 Z)^\times$
+\end{fact}
+Sol : $\phi_k: \Zb/p^2\Zb \implies \Zb/p^2\Zb, \bar{1} \implies \bar{k}, \gcd(k, p) = 1$
+
+Find a group homo $\tau : K \implies \Aut(H)$  
+because $(1+p)^p \equiv 1 \mod p^2$, $\ord(\bar{1+p}) \in \Zb/p^2\Zb$
+Let $P = \gen{\bar{1+p}}$ is the only subgroup of order $p$.
+(if $\exists |Q| = p$, $P \neq Q$ then $P \cap Q = 1$, $|PQ| = p^2$, miserable.)
+So let $\tau : b \implies \phi_{1+p} : a \implies a^{1+p}$
+so $G = \gen{a, b | a^{p^2}=1, b^p = 1, bab^{-1} = a^{1+p}}$ is a non-abelian group of order $p^3$.
+
+\begin{example}
+Isometry of $R^n$
+\end{example}
+
+\begin{definition}[Isometry]
+An isometry of $R^n$ is a function $h: R^n \implies R^n$ that preserves the distance between vectors.
+\end{definition}
+$h = t \circ k$ where $t$ is translation, $k$ is an isometry fixing the origin, i.e. $k \in O(n)$.
+Let $T$ be the group of translations on $R^n$, $T \cong (R^n, +, 0), t \implies t(0)$.
+
+Let $\tau : O(n) \implies \Aut(T), A \implies L_A : R^n \implies R^n, v \implies Av$
+
+\implies $\Isom(R^n) = O(n) \times_\tau R^n$
+
+\begin{example}
+Quaternium $Q_8 = \{\pm 1, \pm i, \pm j, \pm k\}$ is not a semi-deriect product of any two proper subgroups.
+\end{example}
+pf: since $\{\pm 1\}$ is contained in any non-trivial subgroups, can't find $H \cap K = \{1\}$.
+
+\begin{example}
+$A_4$, $V_4 = \{1, (12)(34), (14)(23), (13)(24)\} \lhd A_4, V_4 \cong \Zb/2\Zb \times \Zb/2\Zb$
+\end{example}
+Let $H_{ao} = \gen{(123)} \cong C_3$, define $\tau : H_{ao} \implies \Aut(V_4) \cong GL_2(\Zb/2\Zb)$
+$(123) \implies (\bar{0} \bar{1}; \bar{1} \bar{1})$
+so $A_4 \cong C_3 \times_\tau V_4$.
+
+\begin{exercise}
+Construct $D_n$ as a semi-direct product of $\Zb/n\Zb$ and $\Zb/2\Zb$.
+\end{exercise}
+
+\begin{exercise}
+  \begin{enumerate}
+    \item Show that $S_4$ is a semi-direct product of $V_4$ and $H = \{\sigma \in S_4 | \sigma(4) = 4\} \sim S_3$.
+    \item Show that $S_n$ is a semi-direct product of $A_n$ and $H = \gen{(12)}$.
+  \end{enumerate}
+\end{exercise}
+
+\begin{remark}
+  \begin{itemize}
+    \item $\Aut(\Zb/p\Zb \times \Zb/p\Zb) \cong GL_2(\Zb/p\Zb)$ (regarded as a vector space over $\Zb/p\Zb$)
+    \item $\Aut(\Zb/p\Zb \times \Zb/q\Zb) \cong \Aut(\Zb/p\Zb) \times \Aut(\Zb/q\Zb) \cong C_{p-1} \times C_{q-1}$
+  \end{itemize}
+\end{remark}
